--- a/pages/productos.html
+++ b/pages/productos.html
@@ -92,7 +92,9 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="./Info.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
