--- a/index.html
+++ b/index.html
@@ -125,10 +125,7 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café arábica</p>
                             <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos
-                                principales
-                                cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
-                                en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
-                                tienes de llevarte a los labios siempre que te tomes una taza.</p>
+                                principalescafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades tienes de llevarte a los labios siempre que te tomes una taza.</p>
                             <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span>
                                 Arabia Saudí
                             </p>
@@ -212,7 +209,7 @@
                         </div>
                         <div class="tarjeta-receta-dificultad">
                             <p class="tarjeta-receta-dificultad-texto mb-0">Dificultad:</p>
-                            <div class="tarjeta-receta-dificultad-imagen">
+                            <div class="tarjeta-receta-dificultad-imagen ">
                                 <img src="./multimedia/img/nivel_de_experiencia_02.png" alt="">
                             </div>
                         </div>
@@ -252,9 +249,9 @@
         <div class="container d-md-flex">
             <div class="columna1 col-md-6 d-flex justify-content-center col-12">
                 <div class="columna1-iconos-redes ">
-                    <img src="../multimedia/img/icono-facebook.png" alt="">
-                    <img src="../multimedia/img/icono-instagram.png" alt="">
-                    <img src="../multimedia/img/icono-linkedin.png" alt="">
+                    <img src="./multimedia/img/icono-facebook.png" alt="">
+                    <img src="./multimedia/img/icono-instagram.png" alt="">
+                    <img src="./multimedia/img/icono-linkedin.png" alt="">
                     <h6>
                         SUSCRÍBETE PARA RECIBIR OFERTAS EXCLUSIVAS Y PROMOCIONES:
                     </h6>
@@ -272,12 +269,12 @@
                     Metodo de pago:
                 </h6>
                 <div class="columna2-iconos-pago ">
-                    <img src="../multimedia/img/icono-tarjeta-visa.png" alt="">
-                    <img src="../multimedia/img/icono-tarjeta-martercard.png" alt="">
-                    <img src="../multimedia/img/icono-tarjeta-paypal.png" alt="">
-                    <img src="../multimedia/img/icono-tarjeta-americanexpress.png" alt="">
-                    <img src="../multimedia/img/icono-tarjeta-banco.png" alt="">
-                    <img src="../multimedia/img/icono-tarjeta-apple.png" alt="">
+                    <img src="./multimedia/img/icono-tarjeta-visa.png" alt="">
+                    <img src="./multimedia/img/icono-tarjeta-martercard.png" alt="">
+                    <img src="./multimedia/img/icono-tarjeta-paypal.png" alt="">
+                    <img src="./multimedia/img/icono-tarjeta-americanexpress.png" alt="">
+                    <img src="./multimedia/img/icono-tarjeta-banco.png" alt="">
+                    <img src="./multimedia/img/icono-tarjeta-apple.png" alt="">
                 </div>
             </div>
         </div>
