--- a/pages/productos.html
+++ b/pages/productos.html
@@ -92,7 +92,7 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <a href="./Info.html">
+                            <a href="../info-producto.html">
                                 <button class="botonchip-compra-icono">Añadir a la cesta</button>
                             </a>
                         </div>
