--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
-
-
+    
 </head>
 
 <body>
@@ -125,7 +124,9 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café arábica</p>
                             <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos
-                                principalescafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades tienes de llevarte a los labios siempre que te tomes una taza.</p>
+                                principalescafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se
+                                producen en el mundo pertenecen a este tipo, así que es el tipo de café que más
+                                probabilidades tienes de llevarte a los labios siempre que te tomes una taza.</p>
                             <p class="tarjeta-producto-texto-origen mb-0"><span class="texto-origen">Origen:</span>
                                 Arabia Saudí
                             </p>
@@ -235,7 +236,8 @@
                                 Escribenos tus dudas
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Descargar WhatsApp</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Descargar
+                                    WhatsApp</button>
                                 <button type="button" class="btn btn-primary">Abrir en el ordenador</button>
                             </div>
                         </div>
@@ -244,6 +246,7 @@
 
             </div>
         </div>
+        
     </main>
     <footer class="mx-auto">
         <div class="container d-md-flex">
@@ -258,10 +261,10 @@
                     <div class="input-group">
                         <span class="input-group-text">Suscribirse</span>
                         <div class="form-floating">
-                          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
-                          <label for="floatingInputGroup1">Email</label>
+                            <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                            <label for="floatingInputGroup1">Email</label>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="columna2 col-md-6 col-12">
@@ -278,11 +281,12 @@
                 </div>
             </div>
         </div>
-            </footer>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </body>
 
 </html>
