--- a/pages/info-producto.html
+++ b/pages/info-producto.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
 
 <body>
@@ -70,39 +71,33 @@
         <div class="col-12 col-md-6 container">
             <div class="producto d-flex">
                 <div class="producto-carrusel">
-                    <div id="carouselExampleIndicators" class="carousel slide">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                        </div>
-                        <div class="producto-carrusel-imagen container carousel-inner ">
-                            <div class="producto-carrusel-imagen-pro carousel-item active">
-                                <img src="../multimedia/img/Bag_cafe_arabica_carrusel.png" class="d-block w-100"
-                                    alt="...">
+                    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../multimedia/img/Bag_cafe_arabica.png" class="d-block producto-img-carrusel  " alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="../multimedia/img/cafe-granos-03-carrusel.png" class="d-block w-100"
+                                <img src="../multimedia/img/lata_de_cafe_carrusel.png" class="d-block producto-img-carrusel"
                                     alt="...">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
                 </div>
-                <div class="info border p-5 ">
+                <div class="producto-info p-4 ">
                     <h2>
-                        Cafe arabica
+                        Café arábica
                     </h2>
+                    <hr class="liea-horizontal">
                     <p>
                         La planta de café arábica es uno de los dos
                         principalescafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se
@@ -114,8 +109,29 @@
                         <option value="1">Grano</option>
                         <option value="2">Molido</option>
                     </select>
-                </div>
+                    <div class="producto-info-cantidad">
+                        <div class="input-group">
+                            <span class="input-group-btn">
+                                <button type="button" class="quantity-left-minus btn btn-outline-secondary btn-number producto-info-cantidad-minus"
+                                    data-type="minus" data-field="">
+                                    - </button>
+                            </span>
+                            <input type="text" id="quantity" name="quantity" class="form-control  input-number p-0 px-2.8"
+                                value="1" min="1" max="5">
+                            <span class="input-group-btn">
+                                <button type="button" class="quantity-right-plus btn btn-outline-secondary btn-number"
+                                    data-type="plus" data-field="">
+                                    + </button>
+                            </span>
+                        </div>
+                    </div>
 
+                    <hr class="liea-horizontal">
+
+                    <div class="producto-info-botonchip">
+                        <button class="producto-info-botonchip-comprar">Comprar</button>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -160,6 +176,40 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
+    <script> $(document).ready(function () {
+
+            var quantitiy = 0;
+            $('.quantity-right-plus').click(function (e) {
+
+                // Stop acting like a button
+                e.preventDefault();
+                // Get the field name
+                var quantity = parseInt($('#quantity').val());
+
+                // If is not undefined
+
+                $('#quantity').val(quantity + 1);
+
+
+                // Increment
+
+            });
+
+            $('.quantity-left-minus').click(function (e) {
+                // Stop acting like a button
+                e.preventDefault();
+                // Get the field name
+                var quantity = parseInt($('#quantity').val());
+
+                // If is not undefined
+
+                // Increment
+                if (quantity > 0) {
+                    $('#quantity').val(quantity - 1);
+                }
+            });
+
+        });</script>
 
 </body>
 
