--- a/pages/info-producto.html
+++ b/pages/info-producto.html
@@ -68,17 +68,18 @@
     </div>
 
     <main>
-        <div class="col-12 col-md-6 container">
+        <div class="container">
             <div class="producto d-flex">
-                <div class="producto-carrusel">
-                    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+                <div class="producto-carrusel col-12 col-md-4">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../multimedia/img/Bag_cafe_arabica.png" class="d-block producto-img-carrusel  " alt="...">
+                                <img src="../multimedia/img/Bag_cafe_arabica.png"
+                                    class="d-block producto-img-carrusel w-100 " alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="../multimedia/img/lata_de_cafe_carrusel.png" class="d-block producto-img-carrusel"
-                                    alt="...">
+                                <img src="../multimedia/img/lata_de_cafe_carrusel.png"
+                                    class="d-block producto-img-carrusel w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
@@ -93,7 +94,8 @@
                         </button>
                     </div>
                 </div>
-                <div class="producto-info p-4 ">
+
+                <div class="producto-info p-4 col-12 col-md-8 ">
                     <h2>
                         Café arábica
                     </h2>
@@ -112,12 +114,13 @@
                     <div class="producto-info-cantidad">
                         <div class="input-group">
                             <span class="input-group-btn">
-                                <button type="button" class="quantity-left-minus btn btn-outline-secondary btn-number producto-info-cantidad-minus"
+                                <button type="button"
+                                    class="quantity-left-minus btn btn-outline-secondary btn-number producto-info-cantidad-minus"
                                     data-type="minus" data-field="">
                                     - </button>
                             </span>
-                            <input type="text" id="quantity" name="quantity" class="form-control  input-number p-0 px-2.8"
-                                value="1" min="1" max="5">
+                            <input type="text" id="quantity" name="quantity"
+                                class="form-control  input-number p-0 px-2.8" value="1" min="1" max="5">
                             <span class="input-group-btn">
                                 <button type="button" class="quantity-right-plus btn btn-outline-secondary btn-number"
                                     data-type="plus" data-field="">
