pagina info terminada

--- a/pages/info-producto.html
+++ b/pages/info-producto.html
@@ -68,34 +68,25 @@
     </div>
 
     <main>
-        <div class="container">
+        <div class="container p-0">
             <div class="producto d-flex">
-                <div class="producto-carrusel col-12 col-md-4">
+                <div class="producto-carrusel col-12 col-md-4 my-3 mx-2">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../multimedia/img/Bag_cafe_arabica.png"
-                                    class="d-block producto-img-carrusel w-100 " alt="...">
+                                <img src="../multimedia/img/Bag_cafe_arabica_carrusel-2.png"
+                                    class="d-block producto-img-carrusel " alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="../multimedia/img/lata_de_cafe_carrusel.png"
-                                    class="d-block producto-img-carrusel w-100" alt="...">
+                                <img src="../multimedia/img/lata_de_cafe_carrusel-2.png"
+                                    class="d-block producto-img-carrusel " alt="...">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
+                      </div>
+
                 </div>
 
-                <div class="producto-info p-4 col-12 col-md-8 ">
+                <div class="producto-info p-4 col-12 col-md-8 m-3 ">
                     <h2>
                         Café arábica
                     </h2>
