detalles de alineacion en index

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kofe</title>
     <meta name="description" content="Quienes somos">
-    <meta name="keywords" content="cafe, molido, natural, grano, compra al mayor">
+    <meta name="keywords" content="cafe, valores, nosotros , historia, ecologico">
     <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
     <link rel="stylesheet" href="../scss/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
