--- a/pages/info-producto.html
+++ b/pages/info-producto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kofe</title>
     <meta name="description" content="Quienes somos">
-    <meta name="keywords" content="cafe, molido, natural, grano, compra al mayor">
+    <meta name="keywords" content="cafe, molido, producto natural, grano, ecologico">
     <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
