--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kofe</title>
     <meta name="description" content="Quienes somos">
-    <meta name="keywords" content="cafe, molido, natural, grano, compra al mayor">
+    <meta name="keywords" content="cafe, molido, producto natural, grano, ecologico">
     <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -69,10 +69,10 @@
 
 
     <main>
-        <div class="contenedor-tarjetamaestra container px-0 py-5">
+        <div class="contenedor-tarjetamaestra container px-0">
             <div class="contenedor-tarjeta-producto">
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-producto mx-auto">
+                    <div class="tarjeta-producto mx-2">
                         <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/cafe-granos-01.png">
                         </div>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-producto mx-auto">
+                    <div class="tarjeta-producto mx-2">
                         <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/cafe-granos-02.png">
                         </div>
@@ -118,12 +118,14 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-producto mx-auto">
+                    <div class="tarjeta-producto mx-2">
                         <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/cafe-granos-03.png">
                         </div>
@@ -142,12 +144,14 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-producto mx-auto">
+                    <div class="tarjeta-producto mx-2">
                         <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/cafe-granos-04.png">
                         </div>
@@ -166,12 +170,14 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-producto mx-auto">
+                    <div class="tarjeta-producto mx-2">
                         <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/Bag_cafe_robusta_v.png">
                         </div>
@@ -191,12 +197,14 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-producto mx-auto">
+                    <div class="tarjeta-producto mx-2">
                         <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/Bag_cafe_java_v.png">
                         </div>
@@ -215,12 +223,14 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-producto mx-auto">
+                    <div class="tarjeta-producto mx-2">
                         <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/Bag_cafe_arabica.png">
                         </div>
@@ -239,12 +249,14 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class=" col-12 col-md-3 p-2">
-                    <div class="tarjeta-producto mx-auto">
+                    <div class="tarjeta-producto mx-2">
                         <div class="tarjeta-producto-imagen">
                             <img src="../multimedia/img/Bag_cafe_tarrazu.png">
                         </div>
@@ -263,7 +275,9 @@
 
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
