detalles del footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="navegador">
             <div class="navegador-logo col-12 col-md-3 ">
-                <a href="../index.html" alt="volver al inicio"><img src="./multimedia/img/logo_kofe_blanco.svg"></a>
+                <a href="#" alt="volver al inicio"><img src="./multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
             <nav class="navegador-contenedor col-3 col-md-6">
                 <div class="dropdown navegador-menu d-block d-md-none">
