footer info-producto

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -112,7 +114,9 @@
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -133,7 +137,9 @@
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +161,9 @@
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
-                            <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            <a href="../pages/info-producto.html">
+                                <button class="botonchip-compra-icono">Añadir a la cesta</button>
+                            </a>
                         </div>
                     </div>
                 </div>
