--- a/pages/info-producto.html
+++ b/pages/info-producto.html
@@ -132,7 +132,7 @@
         </div>
 
     </main>
-    <footer class="mx-auto">
+    <footer class="mx-auto footer-info-producto">
         <div class="container d-md-flex">
             <div class="columna1 col-md-6 d-flex justify-content-center col-12">
                 <div class="columna1-iconos-redes ">
