detalles de imagenes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="dropdown navegador-menu d-block d-md-none">
                     <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        <img src="../multimedia/img/menu_hambueguesa.svg">
+                        <img src="./multimedia/img/menu_hambueguesa.svg">
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
@@ -91,7 +91,7 @@
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
-                            <a href="../pages/info-producto.html">
+                            <a href="./pages/info-producto.html">
                                 <button class="botonchip-compra-icono">Añadir a la cesta</button>
                             </a>
                         </div>
@@ -114,7 +114,7 @@
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
-                            <a href="../pages/info-producto.html">
+                            <a href="./pages/info-producto.html">
                                 <button class="botonchip-compra-icono">Añadir a la cesta</button>
                             </a>
                         </div>
@@ -137,7 +137,7 @@
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
-                            <a href="../pages/info-producto.html">
+                            <a href="./pages/info-producto.html">
                                 <button class="botonchip-compra-icono">Añadir a la cesta</button>
                             </a>
                         </div>
@@ -161,7 +161,7 @@
                             <p class="tarjeta-producto-texto-gramos mb-0">500gr</p>
                         </div>
                         <div class="botonchip-compra">
-                            <a href="../pages/info-producto.html">
+                            <a href="./pages/info-producto.html">
                                 <button class="botonchip-compra-icono">Añadir a la cesta</button>
                             </a>
                         </div>
