--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="keywords" content="cafe, molido, producto natural, promociones, recetas">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cafe, molido, producto natural, promociones, recetas">
     <title>Kofe</title>
     <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,39 +15,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
-    
+
 </head>
 
 <body>
     <header>
-        <div class="navegador">
-            <div class="navegador-logo col-12 col-md-3 ">
+        <div class="navegador p-2">
+            <div class="navegador-logo col col-md-5 order-md-0 order-1 ">
                 <a href="#" alt="volver al inicio"><img src="./multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <nav class="navegador-contenedor col-3 col-md-6">
-                <div class="dropdown navegador-menu d-block d-md-none">
-                    <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        <img src="./multimedia/img/menu_hambueguesa.svg">
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
-                        <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
-                        <li><a class="dropdown-item" href="./pages/historia.html">Historia</a></li>
-                    </ul>
-                </div>
+            <nav class="navegador-contenedor col-md-5">
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
                     <ul class="navegador-ul-lista">
                         <!-- <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./Info.html">Info</a></li> -->
+                            <li><a href="./Info.html">Info</a></li> -->
                         <li><a href="./pages/productos.html">Productos</a></li>
                         <li><a href="./pages/historia.html">Historia</a></li>
                         <li><a href="./pages/empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
             </nav>
-
-            <div class="navegador-icono col-12 col-md-3">
+            <div class="dropdown navegador-menu d-block col-1 d-md-none order-0">
+                <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <img src="./multimedia/img/menu_hambueguesa.svg">
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
+                    <li><a class="dropdown-item" href="./pages/historia.html">Historia</a></li>
+                </ul>
+            </div>
+            <div class="navegador-icono col-3 col-md-2 d-none d-md-block order-2">
                 <div class="navegador-icono-contenedor">
                     <button class="navegador-boton-icono">
                         <img src="./multimedia/img/🦆 icon _search_.svg" alt="">
@@ -59,6 +59,20 @@
                     </button>
                 </div>
             </div>
+            <div class="navegador-icono-movil d-flex d-md-none  order-2">
+                <button class="navegador-icono-movil-imagen">
+                    <img src="./multimedia/img/usuario -movil.png" alt="">
+                </button>
+                <button class="navegador-icono-movil-imagen">
+                    <img src="./multimedia/img/carrito-movil.png" alt="">
+                </button>
+            </div>
+        </div >
+        <div class="d-md-none navegador-boton-busqueda ">
+            <button type="button" class="btn border navegador-boton-busqueda-imagen"
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                <img src="./multimedia/img/buscar-movil.png" alt="">
+            </button>
         </div>
         <div class="banner-promociones">
             <p class="banner-promociones-titulo"> Rebajas</p>
@@ -254,7 +268,7 @@
 
             </div>
         </div>
-        
+
     </main>
     <footer class="mx-auto">
         <div class="container d-md-flex">
