--- a/pages/info-producto.html
+++ b/pages/info-producto.html
@@ -68,9 +68,9 @@
     </div>
 
     <main>
-        <div class="container p-0">
+        <div class="container">
             <div class="producto d-flex">
-                <div class="producto-carrusel col-12 col-md-4 my-3 mx-2">
+                <div class="producto-carrusel col col-md-4">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -82,57 +82,117 @@
                                     class="d-block producto-img-carrusel " alt="...">
                             </div>
                         </div>
-                      </div>
-
+                    </div>
                 </div>
-
-                <div class="producto-info p-4 col-12 col-md-8 m-3 ">
+                <div class="producto-info col-5 col-md ">
                     <h2>
                         Café arábica
                     </h2>
+                    <img src="../multimedia/img/Group 205.png" alt="">
                     <hr class="liea-horizontal">
-                    <p>
-                        La planta de café arábica es uno de los dos
-                        principalescafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se
-                        producen en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
-                        tienes de llevarte a los labios siempre que te tomes una taza.
-                    </p>
-                    <select class="form-select" aria-label="Default select example">
-                        <option selected>Tipo de cafe</option>
-                        <option value="1">Grano</option>
-                        <option value="2">Molido</option>
-                    </select>
-                    <div class="producto-info-cantidad">
-                        <div class="input-group">
-                            <span class="input-group-btn">
-                                <button type="button"
-                                    class="quantity-left-minus btn btn-outline-secondary btn-number producto-info-cantidad-minus"
-                                    data-type="minus" data-field="">
-                                    - </button>
-                            </span>
-                            <input type="text" id="quantity" name="quantity"
-                                class="form-control  input-number p-0 px-2.8" value="1" min="1" max="5">
-                            <span class="input-group-btn">
-                                <button type="button" class="quantity-right-plus btn btn-outline-secondary btn-number"
-                                    data-type="plus" data-field="">
-                                    + </button>
-                            </span>
+                    <h2 class="texto-precio">21,95 €</h2>
+                    <h6 class="texto-iva">IVA Incluido</h6>
+                    <hr class="liea-horizontal">
+                    <h4 class="texto-titulo-seleccion">
+                        Tipo de Café
+                    </h4>
+                    <div class="producto-info-seleccion">
+                        <div class="producto-info-seleccion-imagen me-3">
+                            <img src="../multimedia/img/Bag_cafe_arabica.png" alt="">
+                            <h6 class="producto-info-seleccion-texto">
+                                Molido
+                            </h6>
+                        </div>
+                        <div class="producto-info-seleccion-imagen">
+                            <img src="../multimedia/img/lata_de_cafe_carrusel.png" alt="">
+                            <h6 class="producto-info-seleccion-texto">
+                                Grano
+                            </h6>
                         </div>
                     </div>
-
+                    
+                </div>
+                <div class="producto-info-pagar col-3">
+                    <h2 class="producto-info-pagar-precio">
+                        21,95 €
+                    </h2>
+                    <p class="producto-info-pagar-texto">
+                        Entrega <strong>GRATIS CON PEDIDOS DE 30€</strong>, entrega más rápida en 3 días.
+                    </p>
                     <hr class="liea-horizontal">
-
-                    <div class="producto-info-botonchip">
-                        <button class="producto-info-botonchip-comprar">Comprar</button>
+                    <div class="d-inline-flex align-items-center ">
+                        <img src="../multimedia/img/icon _location.png" alt="">
+                        <h6 class="producto-info-pagar-texto m-0">Enviar a Elizabeth - Barcelona 23056</h6>
                     </div>
+                    <hr class="liea-horizontal">
+                    <h6 class="producto-info-pagar-texto text-danger">
+                        Solo queda(n) 3 en stock
+                    </h6>
+                    <div class="producto-info-botonchip">
+                        <button class="producto-info-botonchip-comprar" style="background-color:#2A3040 ;">Añadir a la cesta</button>
+                    </div>
+                    <div class="producto-info-botonchip">
+                        <button class="producto-info-botonchip-comprar">Comprar ya</button>
+                    </div>
+                    <hr class="liea-horizontal">
+                    <div class="d-flex">
+                        <div class="producto-info-pagar-texto-pago col-6 d-flex flex-column ">
+                            <span>Pago</span>
+                            <span>Envío desde</span>
+                            <span>Vendido por</span>
+                        </div>
+                        <div class="producto-info-pagar-texto col-6 d-flex flex-column">
+                            <span><strong>Transacción segura</strong></span>
+                            <span><strong>Kofe</strong></span>
+                            <span><strong>Kofe</strong></span>
+                        </div>
+                    </div>
+                    <hr class="liea-horizontal">
+                    <h6 class="producto-info-pagar-texto text-primary-emphasis">
+                        Detalles de devoluciones
+                    </h6>
                 </div>
             </div>
-        </div>
+            <hr class="liea-horizontal">
+            <div>
+                <h4>Acerca de este producto</h4>
+                <p>
+                    La planta de café arábica es uno de los dos
+                    principalescafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se
+                    producen en el mundo pertenecen a este tipo, así que es el tipo de café que más
+                    probabilidades
+                    tienes de llevarte a los labios siempre que te tomes una taza.
+                </p>
+            </div>
+            <!-- <select class="form-select" aria-label="Default select example">
+                <option selected>Tipo de cafe</option>
+                <option value="1">Grano</option>
+                <option value="2">Molido</option>
+            </select> -->
+            <!-- <div class="producto-info-cantidad">
+                <div class="input-group">
+                    <span class="input-group-btn">
+                        <button type="button"
+                            class="quantity-left-minus btn btn-outline-secondary btn-number producto-info-cantidad-minus"
+                            data-type="minus" data-field="">
+                            - </button>
+                    </span>
+                    <input type="text" id="quantity" name="quantity"
+                        class="form-control  input-number p-0 px-2.8" value="1" min="1" max="5">
+                    <span class="input-group-btn">
+                        <button type="button" class="quantity-right-plus btn btn-outline-secondary btn-number"
+                            data-type="plus" data-field="">
+                            + </button>
+                    </span>
+                </div>
+            </div> -->
 
+            <hr class="liea-horizontal">
+        </div>
         </div>
 
     </main>
-    <footer class="mx-auto footer-info-producto">
+    <!-- <footer class="mx-auto">
         <div class="container d-md-flex">
             <div class="columna1 col-md-6 d-flex justify-content-center col-12">
                 <div class="columna1-iconos-redes ">
@@ -145,10 +205,10 @@
                     <div class="input-group">
                         <span class="input-group-text">Suscribirse</span>
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
-                            <label for="floatingInputGroup1">Email</label>
+                          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                          <label for="floatingInputGroup1">Email</label>
                         </div>
-                    </div>
+                      </div>
                 </div>
             </div>
             <div class="columna2 col-md-6 col-12">
@@ -165,12 +225,12 @@
                 </div>
             </div>
         </div>
-    </footer>
+            </footer> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
-    <script> $(document).ready(function () {
+    <!-- <script> $(document).ready(function () {
 
             var quantitiy = 0;
             $('.quantity-right-plus').click(function (e) {
@@ -203,7 +263,7 @@
                 }
             });
 
-        });</script>
+        });</script> -->
 
 </body>
 
