MediaQ pagina info producto

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="navegador-logo col col-md-5 order-md-0 order-1 ">
                 <a href="#" alt="volver al inicio"><img src="./multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <nav class="navegador-contenedor col-md-5">
+            <nav class="navegador-contenedor col-md-5 d-flex">
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
                     <ul class="navegador-ul-lista">
                         <!-- <li><a href="../index.html">Inicio</a></li>
