--- a/pages/historia.html
+++ b/pages/historia.html
@@ -25,34 +25,33 @@
 
 <body>
     <header>
-        <div class="navegador">
-            <div class="navegador-logo col-12 col-md-3 ">
-                <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
+        <div class="navegador p-3">
+            <div class="navegador-logo col col-md-5 order-md-0 order-1 ">
+                <a href="#" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <nav class="navegador-contenedor col-3 col-md-6">
-                <div class="dropdown navegador-menu d-block d-md-none">
-                    <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        <img src="../multimedia/img/menu_hambueguesa.svg">
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="../pages/productos.html">Productos</a></li>
-                        <li><a class="dropdown-item" href="../pages/empleo.html">Empleo</a></li>
-                        <li><a class="dropdown-item" href="../pages/historia.html">Historia</a></li>
-                    </ul>
-                </div>
+            <nav class="navegador-contenedor col-md-5 d-flex">
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
                     <ul class="navegador-ul-lista">
                         <!-- <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./Info.html">Info</a></li> -->
+                            <li><a href="./Info.html">Info</a></li> -->
                         <li><a href="../pages/productos.html">Productos</a></li>
                         <li><a href="../pages/historia.html">Historia</a></li>
                         <li><a href="../pages/empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
             </nav>
-
-            <div class="navegador-icono col-12 col-md-3">
+            <div class="dropdown navegador-menu d-block col-1 d-md-none order-0">
+                <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <img src="../multimedia/img/menu_hambueguesa.svg">
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
+                    <li><a class="dropdown-item" href="./pages/historia.html">Historia</a></li>
+                </ul>
+            </div>
+            <div class="navegador-icono col-3 col-md-2 d-none d-md-block order-2">
                 <div class="navegador-icono-contenedor">
                     <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
@@ -65,6 +64,20 @@
                     </button>
                 </div>
             </div>
+            <div class="navegador-icono-movil d-flex d-md-none  order-2">
+                <button class="navegador-icono-movil-imagen">
+                    <img src="../multimedia/img/usuario -movil.png" alt="">
+                </button>
+                <button class="navegador-icono-movil-imagen">
+                    <img src="../multimedia/img/carrito-movil.png" alt="">
+                </button>
+            </div>
+        </div >
+        <div class="d-md-none navegador-boton-busqueda ">
+            <button type="button" class="btn border navegador-boton-busqueda-imagen"
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                <img src="../multimedia/img/buscar-movil.png" alt="">
+            </button>
         </div>
     </header>
 
