--- a/pages/info-producto.html
+++ b/pages/info-producto.html
@@ -21,34 +21,33 @@
 
 <body>
     <header>
-        <div class="navegador">
-            <div class="navegador-logo col-12 col-md-3 ">
-                <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
+        <div class="navegador p-3">
+            <div class="navegador-logo col col-md-5 order-md-0 order-1 ">
+                <a href="#" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <nav class="navegador-contenedor col-3 col-md-6">
-                <div class="dropdown navegador-menu d-block d-md-none">
-                    <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        <img src="../multimedia/img/menu_hambueguesa.svg">
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="../index.html">Home</a></li>
-                        <!-- <li><a class="dropdown-item" href="./producto.html">Productos</a></li> -->
-                        <li><a class="dropdown-item" href="./empleo.html">Empleo</a></li>
-                        <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
-                    </ul>
-                </div>
+            <nav class="navegador-contenedor col-md-5 d-flex">
                 <div class="navegador-ul-contenedor col-9 col-md-auto d-none d-md-flex">
                     <ul class="navegador-ul-lista">
-                        <li><a href="../index.html">Home</a></li>
-                        <!-- <li><a href="./Info.html">Info</a></li> -->
-                        <!-- <li><a href="../productos.html">Productos</a></li> -->
-                        <li><a href="./historia.html">Historia</a></li>
-                        <li><a href="./empleo.html" target="_blank">Empleo</a></li>
+                        <!-- <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="./Info.html">Info</a></li> -->
+                        <li><a href="../pages/productos.html">Productos</a></li>
+                        <li><a href="../pages/historia.html">Historia</a></li>
+                        <li><a href="../pages/empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
             </nav>
-            <div class="navegador-icono col-12 col-md-3">
+            <div class="dropdown navegador-menu d-block col-1 d-md-none order-0">
+                <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <img src="../multimedia/img/menu_hambueguesa.svg">
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
+                    <li><a class="dropdown-item" href="./pages/historia.html">Historia</a></li>
+                </ul>
+            </div>
+            <div class="navegador-icono col-3 col-md-2 d-none d-md-block order-2">
                 <div class="navegador-icono-contenedor">
                     <button class="navegador-boton-icono">
                         <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
@@ -61,6 +60,20 @@
                     </button>
                 </div>
             </div>
+            <div class="navegador-icono-movil d-flex d-md-none  order-2">
+                <button class="navegador-icono-movil-imagen">
+                    <img src="../multimedia/img/usuario -movil.png" alt="">
+                </button>
+                <button class="navegador-icono-movil-imagen">
+                    <img src="../multimedia/img/carrito-movil.png" alt="">
+                </button>
+            </div>
+        </div >
+        <div class="d-md-none navegador-boton-busqueda ">
+            <button type="button" class="btn border navegador-boton-busqueda-imagen"
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                <img src="../multimedia/img/buscar-movil.png" alt="">
+            </button>
         </div>
     </header>
     <div class="banner-rebajas">
@@ -84,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="producto-info col-5 col-md ">
+                <div class="producto-info col col-md ">
                     <h2>
                         Café arábica
                     </h2>
@@ -110,9 +123,9 @@
                             </h6>
                         </div>
                     </div>
-                    
+
                 </div>
-                <div class="producto-info-pagar col-3">
+                <div class="producto-info-pagar col-md-3 col">
                     <h2 class="producto-info-pagar-precio">
                         21,95 €
                     </h2>
@@ -129,7 +142,8 @@
                         Solo queda(n) 3 en stock
                     </h6>
                     <div class="producto-info-botonchip">
-                        <button class="producto-info-botonchip-comprar" style="background-color:#2A3040 ;">Añadir a la cesta</button>
+                        <button class="producto-info-botonchip-comprar" style="background-color:#2A3040 ;">Añadir a la
+                            cesta</button>
                     </div>
                     <div class="producto-info-botonchip">
                         <button class="producto-info-botonchip-comprar">Comprar ya</button>
@@ -149,12 +163,12 @@
                     </div>
                     <hr class="liea-horizontal">
                     <h6 class="producto-info-pagar-texto text-primary-emphasis">
-                        Detalles de devoluciones
+                        <a> Detalles de devoluciones </a>
                     </h6>
                 </div>
             </div>
             <hr class="liea-horizontal">
-            <div>
+            <div class="producto-info-subtitulo-producto">
                 <h4>Acerca de este producto</h4>
                 <p>
                     La planta de café arábica es uno de los dos
@@ -164,35 +178,9 @@
                     tienes de llevarte a los labios siempre que te tomes una taza.
                 </p>
             </div>
-            <!-- <select class="form-select" aria-label="Default select example">
-                <option selected>Tipo de cafe</option>
-                <option value="1">Grano</option>
-                <option value="2">Molido</option>
-            </select> -->
-            <!-- <div class="producto-info-cantidad">
-                <div class="input-group">
-                    <span class="input-group-btn">
-                        <button type="button"
-                            class="quantity-left-minus btn btn-outline-secondary btn-number producto-info-cantidad-minus"
-                            data-type="minus" data-field="">
-                            - </button>
-                    </span>
-                    <input type="text" id="quantity" name="quantity"
-                        class="form-control  input-number p-0 px-2.8" value="1" min="1" max="5">
-                    <span class="input-group-btn">
-                        <button type="button" class="quantity-right-plus btn btn-outline-secondary btn-number"
-                            data-type="plus" data-field="">
-                            + </button>
-                    </span>
-                </div>
-            </div> -->
-
-            <hr class="liea-horizontal">
         </div>
-        </div>
-
     </main>
-    <!-- <footer class="mx-auto">
+    <footer class="mx-auto">
         <div class="container d-md-flex">
             <div class="columna1 col-md-6 d-flex justify-content-center col-12">
                 <div class="columna1-iconos-redes ">
@@ -205,10 +193,10 @@
                     <div class="input-group">
                         <span class="input-group-text">Suscribirse</span>
                         <div class="form-floating">
-                          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
-                          <label for="floatingInputGroup1">Email</label>
+                            <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                            <label for="floatingInputGroup1">Email</label>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="columna2 col-md-6 col-12">
@@ -225,45 +213,12 @@
                 </div>
             </div>
         </div>
-            </footer> -->
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
-    <!-- <script> $(document).ready(function () {
 
-            var quantitiy = 0;
-            $('.quantity-right-plus').click(function (e) {
-
-                // Stop acting like a button
-                e.preventDefault();
-                // Get the field name
-                var quantity = parseInt($('#quantity').val());
-
-                // If is not undefined
-
-                $('#quantity').val(quantity + 1);
-
-
-                // Increment
-
-            });
-
-            $('.quantity-left-minus').click(function (e) {
-                // Stop acting like a button
-                e.preventDefault();
-                // Get the field name
-                var quantity = parseInt($('#quantity').val());
-
-                // If is not undefined
-
-                // Increment
-                if (quantity > 0) {
-                    $('#quantity').val(quantity - 1);
-                }
-            });
-
-        });</script> -->
 
 </body>
 
